--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15"
+    "angular-scenario": "1.2.15",
+    "bootstrap": "~3.1.1"
   }
 }
