--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "karma-ng-scenario": "^0.1.0",
     "grunt-karma": "^0.8.3",
     "karma": "^0.12.16",
-    "karma-ng-html2js-preprocessor": "^0.1.0"
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "grunt-wiredep": "^1.7.0"
   },
   "engines": {
     "node": ">=0.10.0"
