--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "angular-mocks": "1.2.15",
     "angular-scenario": "1.2.15",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular-route": "~1.2.16"
   }
 }
