--- a/bower.json
+++ b/bower.json
@@ -4,12 +4,12 @@
   "dependencies": {
     "angular": "1.2.15",
     "json3": "~3.2.6",
-    "es5-shim": "~2.1.0"
+    "es5-shim": "~2.1.0",
+    "angular-route": "~1.2.16",
+    "bootstrap": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15",
-    "bootstrap": "~3.1.1",
-    "angular-route": "~1.2.16"
+    "angular-scenario": "1.2.15"  
   }
 }
