--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "bootang",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-contrib-less": "^0.11.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
