--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "grunt-contrib-less": "^0.11.0"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
@@ -32,7 +32,8 @@
     "grunt-karma": "^0.8.3",
     "karma": "^0.12.16",
     "karma-ng-html2js-preprocessor": "^0.1.0",
-    "grunt-wiredep": "^1.7.0"
+    "grunt-wiredep": "^1.7.0",
+    "grunt-angular-templates": "^0.5.5"
   },
   "engines": {
     "node": ">=0.10.0"
