Added info for bower

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
-  "name": "boot-ang",
-  "version": "0.0.0",
+  "name": "BootAng",
+  "version": "0.0.1",
+  "main": ["dist_bootang/dist/bootang.min.css", "dist_bootang/dist/bootang.min.js"],
+  "ignore" : ["app/*", "dist/*", "dist_bootang/tmp", "node/modules/*", "test/*", "."],
   "dependencies": {
     "angular": "1.2.15",
     "json3": "~3.2.6",
