--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-wiredep": "^1.7.0",
     "grunt-angular-templates": "^0.5.5",
     "karma-jasmine": "^0.1.5",
-    "karma-chrome-launcher": "^0.1.4"
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "engines": {
     "node": ">=0.10.0"
